# flowml

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml  rust-build.yml
examples/: basic_app.py  data_cleaning_demo.py
flowml/: __init__.py  app.py
flowml/api/: middleware.py  server.py  websocket.py
flowml/api/routes/: cleaning.py  jobs.py  metrics.py  pipeline.py  preview.py  upload.py  visualize.py
flowml/cli/: commands.py  main.py  ui.py
flowml/dashboard/static/: charts.js
flowml/dashboard/templates/: base.html  cleaning.html  dashboard.html  metrics.html  pipeline.html  preview.html  upload.html
flowml/logging/: rich_logger.py
flowml/runtime/: cleaning_engine.py  data_loader.py  data_source.py  job_manager.py  metrics_engine.py  pipeline.py  pipeline_runner.py  registry.py  rule_engine.py  scheduler.py  state.py
flowml/rust_bridge/: bridge.py
flowml/storage/: base.py  parquet.py  sqlite.py
flowml/utils/: helpers.py
flowml/visualization/: charts.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Card.jsx  EmptyState.jsx  Loader.jsx  Sidebar.jsx  Table.jsx
frontend/src/hooks/: useDataset.js
frontend/src/layout/: DashboardLayout.jsx
frontend/src/pages/: Metrics.jsx  Pipeline.jsx  Preview.jsx  Upload.jsx
rust/: Cargo.toml
rust-core/src/: csv_reader.rs  metrics.rs
rust/src/: batching.rs  cleaning.rs  lib.rs
tests/: test_api.py  test_cleaning.py  test_rust.py
