[project]
name = "flowml-core"
version = "0.1.0"
description = "FlowML: A High-performance data pipeline framework combining FastAPI, Rust (Rayon), and real-time WebSocket execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "maturin>=1.12.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pymysql>=1.1.2",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.48",
    "typer>=0.24.1",
    "uvicorn[standard]>=0.42.0",
    "websockets>=16.0",
    "wsproto>=1.3.2",
]

license = { file = "LICENSE" }

[project.scripts]
flowml = "flowml.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["flowml*"]
exclude = ["frontend*", "data*", "docker*"]


[tool.black]
target-version = ["py311"]
line-length = 88